refactor(index): use Panama mmapMove flat_index.bin from classpath to data/. Replace InputStream/ByteBuffer with memory-mappedfile via Panama Foreign API and update Dockerfiles.